# spektrafilm

./: .gitignore  README.md  profile_summary.csv  pyproject.toml  pytest.ini
agx_emulsion/model/: stocks.py
agx_emulsion/profiles/: factory.py  io.py
archive/profile_creator/: README.md  curve_correction_experiments.py  masking_and_sensitivity_experiments.py  plotting_experiments.py
examples/: create_profile.py  inspect_profile_snapshots.py  midgray_balance.py  plot_raw_profiles.py  run_simulation.py
scripts/: clear_numba_cache.py  compare_simulation_revisions.py  make_profile_summary_csv.py  make_profiles.py  make_spectral_upsampling_luts.py  profile_gui_import_animation_timing.py  regenerate_create_profile_baselines.py  regenerate_neutral_print_filters.py  regenerate_printing_filters.py  regenerate_single_negative_paper_pair.py  regenerate_spectral_upsampling_luts.py  regenerate_test_baselines.py  runtime_process_timing.py
src/profiles_creator/: correct.py  factory.py  fitting.py  plot.py  plotting.py  reconstruct.py
src/profiles_factory/: __init__.py  api.py  balance.py  factory.py  reconstruct.py  runtime_bridge.py  unmix.py
src/spectral_film_lab/: __init__.py  config.py
src/spektrafilm/: __init__.py  config.py
src/spektrafilm_gui/: app.py  controller.py  controller_layers.py  controller_persistence.py  controller_profile_sync.py  controller_runtime.py  film_profile_defaults.py  icons.py  napari_layout.py  options.py  params_mapper.py  persistence.py  polaroid_animation.py  state.py  state_bridge.py  theme.py  theme_palette.py  theme_styles.py  virtual_photo_paper_back.py  widget_editors.py  widget_primitives.py  widget_sections.py  widget_specs.py  widgets.py
src/spektrafilm_profile_creator/: __init__.py  neutral_print_filters.py  plotting.py  printing_filters.py  (+4 more)
tests/: __init__.py  conftest.py  gui_test_utils.py  regression_baselines.py  test_couplers.py  test_emulsion.py  test_enlarger_filters.py  test_grain.py  test_gui_app.py  test_gui_controller.py  test_gui_layout.py  test_gui_params_mapper.py  test_gui_persistence.py  test_gui_state_bridge.py  test_lut.py  test_parametric.py  test_photo_params.py  test_pipeline_smoke.py  test_profiles.py  test_raw_file_processor.py  test_raw_smoke.py  test_regression_baselines.py  test_runtime_api.py
(+552 files in other folders)
