[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agx-emulsion"
version = "0.1.0"
description = "Simulation of analog film photography"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPLv3" }
authors = [
    { name = "Andrea Volpato", email = "volpedellenevi@gmail.com" },
]
dependencies = [
    "numpy~=2.1.3",
    "matplotlib~=3.10.0",
    "scipy~=1.14.1",
    "colour-science~=0.4.6",
    "scikit-image~=0.25.0",
    "opt-einsum~=3.4.0",
    "napari~=0.5.5",
    "magicgui~=0.10.0",
    "lmfit~=1.3.2",
    "pyqt5~=5.15.9",
    "numba~=0.61.0",
    "OpenImageIO~=3.0.3.1",
    "pyfftw~=0.15.0",
]

[project.scripts]
agx-emulsion = "spectral_film_lab.gui.main:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["spectral_film_lab*", "profiles_factory*"]

[tool.setuptools.package-data]
spectral_film_lab = [
    "data/**/*",
]
